...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XjG-wk-99h">
                                        <rect key="frame" x="0.0" y="80" width="353" height="60"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="60" id="dPO-cw-Oqy"/>
                                        </constraints>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="filled" title="Login">
                                            <color key="baseBackgroundColor" systemColor="systemGreenColor"/>
                                        </buttonConfiguration>
                                        <connections>
                                            <segue destination="zPX-gQ-u9c" kind="show" identifier="MainViewToLogin" id="F5g-jM-JST"/>
                                        </connections>
                                    </button>
...
                                                            </label>
                                                        </subviews>
                                                    </stackView>
                                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="LCj-jY-KrI">
                                                        <rect key="frame" x="0.0" y="317.33333333333331" width="353" height="59.333333333333314"/>
                                                        <subviews>
                                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DkC-Ug-4LA">
                                                                <rect key="frame" x="0.0" y="0.0" width="353" height="40"/>
                                                                <constraints>
                                                                    <constraint firstAttribute="height" constant="40" id="syU-hS-2ag"/>
                                                                </constraints>
                                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                <textInputTraits key="textInputTraits"/>
...
